# monsgeek-linux-bridge

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  configuration.md  features.md  reverse-engineering.md  safety.md  ui-flows.md
src/: bridge.rs  constants.rs  grpc.rs  main.rs  smoke_test.rs  udev_installer.rs
tools/: grpc-smoke-test.mjs  grpc-web-probe.mjs  hid-feature-io.c  hid-feature-version.c  hid-sysfs-probe.mjs
udev/: 99-monsgeek-hidraw.rules
