[package]
name = "monsgeek-linux-bridge"
version = "0.2.0"
edition = "2021"
license = "UNLICENSED"

[dependencies]
anyhow = "1.0"
axum = "0.8"
base64 = "0.22"
libc = "0.2"
percent-encoding = "2.3"
serde_json = "1.0"
tokio = { version = "1.48", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
